--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "styled": "^1.0.0",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "@storybook/react": "^6.3.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,11 +17,23 @@
     "test": "react-scripts test",
     "lint": "npx eslint src/*",
     "fix": "npx eslint src/* --fix",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": [
       "react-app"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
     ]
   },
   "browserslist": {
@@ -36,9 +49,15 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^6.3.9",
+    "@storybook/addon-essentials": "^6.3.9",
+    "@storybook/addon-links": "^6.3.9",
+    "@storybook/node-logger": "^6.3.9",
+    "@storybook/preset-create-react-app": "^3.2.0",
     "@types/node": "^16.10.1",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "@types/styled-components": "^5.1.14",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "eslint": "^7.32.0",
