--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@storybook/react": "^6.3.9",
     "components": "^0.1.0",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "styled": "^1.0.0",
-    "styled-components": "^5.3.1",
-    "@storybook/react": "^6.3.9"
+    "styled-components": "^5.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
